# VectorGEMM

./: CMakeLists.txt  README.md
gemm_test/: CMakeLists.txt  gemm_tail_fix_guide.md  heisenbug.md  heisenbug_expanded.md  test_benchmark.c  test_common.h  test_gemm_execute.c  test_gemm_large.c  test_gemm_small.c  test_gemm_validated.c  test_main.c  test_planning.c
src/gemm_2/: gemm.h  gemm_kalman.c  gemm_kernels_avx2.h  gemm_large.c  gemm_optimizations.md  gemm_planning.c  gemm_planning.h  gemm_simd_ops.h  gemm_small.c  gemm_small.h  gemm_static.c  gemm_static.h  gemm_symmetric.c  gemm_utils.h  gemm_validation.h  masked_loads_ub_guide.md
src/neon/: gemm.c  gemm_neon.c  gemm_neon.h  gemm_neon_query.h
